--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
-.sliderparallax {
-    background-image: url("/img/OPERACION_LOGISTICA2.jpeg");
-    min-height: 150px;
+.parallax {
+    background-image: url("/img/cine5.jpeg");
+    min-height: 400px;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -15,8 +15,5 @@
     justify-content: center;
     align-items: center;
     display: flex;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+
 }
